--- a/src/app/who-am-i/who-am-i.component.html
+++ b/src/app/who-am-i/who-am-i.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-black custom_heghit d-flex justify-content-center align-items-center">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-6 pt-5">
-      <img src="../../assets/imgs/num1.webp" alt=""  class="img-fluid d-flex justify-content-center mx-auto">
+      <img src="assets/imgs/num1.webp" alt=""  class="img-fluid d-flex justify-content-center mx-auto">
     </div>
     <div class="col-md-6 pt-5 ">
       <h2 class="text-white">Hello I'm Samir Ahmed</h2>
