--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -23,7 +23,7 @@
         <h3 class="text-center">Sass</h3>
       </div>
       <div class="col-md-3 my-3">
-        <img src="../../assets/imgs/typescript-svgrepo-com.svg" alt="" width="130px" class="d-flex justify-content-center my_m">
+        <img src="assets/imgs/typescript-svgrepo-com.svg" alt="" width="130px" class="d-flex justify-content-center my_m">
         <h3 class="text-center">Ts</h3>
       </div>
       <div class="col-md-3 my-3">
@@ -73,7 +73,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-5 my-4">
         <div class="d-flex justify-content-between align-items-center mine">
-          <img src="../../assets/imgs/typescript-svgrepo-com.svg" alt="" width="130px" class="d-flex justify-content-center my_m">
+          <img src="assets/imgs/typescript-svgrepo-com.svg" alt="" width="130px" class="d-flex justify-content-center my_m">
           <div class="percentage-slider sexith"></div>
         </div>
         <h2 class="ps-4 mt-4 text-center">My Experience <span class="text-danger">95%</span></h2>
